--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,6 @@ spring.sql.init.mode= never
 
 #spring.jpa.defer-datasource-initialization=true
 #inizializirung DB
-spring.jpa.hibernate.ddl-auto=create-drop 
+spring.jpa.hibernate.ddl-auto=update
 
 #logging.level.root=debug
