--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,5 +22,8 @@ spring.sql.init.mode= never
 #spring.jpa.defer-datasource-initialization=true
 #inizializirung DB
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
 
 #logging.level.root=debug
